--- a/css files/index.css
+++ b/css files/index.css
@@ -227,7 +227,7 @@
     display: grid;
     grid-template-columns: 300px 1fr;   /* col1 = image, col2 = text */
     grid-template-rows: auto auto auto; /* 3 rows */
-    column-gap: 20px;
+    column-gap: clamp(250px, 2vw, 200px);
     row-gap: 10px;
     padding: 30px 0px;
     margin: auto;
